--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -76,10 +76,10 @@
                 <div class="p-3 py-5">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h4 class="text-right">Настройки профиля</h4>
-                        <div class="form-check form-switch">
-                            <label class="form-check-label" for="creatorSwitcher">Я создатель</label>
-                            <input class="form-check-input" style="margin" type="checkbox" id="creatorSwitcher" onchange="isCreator()">
-                          </div>
+                        {% comment %} <div class="form-check form-switch"> {% endcomment %}
+                            {% comment %} <label class="form-check-label" for="creatorSwitcher">Я создатель</label> {% endcomment %}
+                            {% comment %} <input class="form-check-input" style="margin" type="checkbox" id="creatorSwitcher" onchange="isCreator()"> {% endcomment %}
+                          {% comment %} </div> {% endcomment %}
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-6">
@@ -107,6 +107,12 @@
                         <div class="col-md-6">
                             <label class="labels">Город/Регион</label>
                             <input type="text" class="form-control" value="" placeholder="Город"></div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="coll-md-3">
+                            <label class="labels">Загрузить фото</label>
+                            <input id="fileupload" class="form-control" name="myfile" type="file" />
+                        </div>
                     </div>
                     <div class="mt-5 text-center">
                         <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
