--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -2,51 +2,132 @@
 
 {% block content %}
 
-<form class="row g-3">
 
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <title>Snippet - BBBootstrap</title>
+  <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css' rel='stylesheet'>
+  <link href='' rel='stylesheet'>
+  <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <style>
+    body {
+      background: rgb(99, 39, 120)
+    }
 
-    <!-- choose one (company)-->
-<div class="col-md-6">
+    .form-control:focus {
+      box-shadow: none;
+      border-color: #BA68C8
+    }
 
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-      <label class="form-check-label" for="flexRadioDefault1">
-        Я представляю компанию
-      </label>
+    .profile-button {
+      background: rgb(99, 39, 120);
+      box-shadow: none;
+      border: none
+    }
+
+    .profile-button:hover {
+      background: #682773
+    }
+
+    .profile-button:focus {
+      background: #682773;
+      box-shadow: none
+    }
+
+    .profile-button:active {
+      background: #682773;
+      box-shadow: none
+    }
+
+    .back:hover {
+      color: #682773;
+      cursor: pointer
+    }
+
+    .labels {
+      font-size: 11px
+    }
+
+    .add-experience:hover {
+      background: #BA68C8;
+      color: #fff;
+      cursor: pointer;
+      border: solid 1px #BA68C8
+    }
+  </style>
+</head>
+
+<body oncontextmenu='return false' class='snippet-body'>
+  <div class="container rounded bg-white mt-5 mb-5" calss="display: flex;">
+    <div class="row">
+      <div class="col-md-1">
+        <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div>
+      </div>
+      <div id="main_change" class="col-md-10">
+        <div class="p-3 py-5">
+          <div class="d-flex justify-content-center align-items-center mb-3">
+            <h4 class="text-right">Настройки профиля</h4>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-md-8">
+              <div class="input-group mb-6">
+                <div class="input-group-prepend">
+                  <label class="input-group-text" for="inputGroupSelect01">Какое у вас образование?</label>
+                </div>
+                <select class="custom-select" id="inputGroupSelect01">
+                  <option selected>Выбрать</option>
+                  <option value="1">Дошкольное</option>
+                  <option value="2">Начальное общее</option>
+                  <option value="3">Основное общее</option>
+                  <option value="4">Среднее общее</option>
+                  <option value="5">среднее профессиональное</option>
+                  <option value="6">высшее образование - бакалавриат</option>
+                  <option value="7">высшее образование - специалитет, магистратура</option>
+                  <option value="8">высшее образование - подготовка кадров высшей квалификации</option>
+                  <option value="9"></option>
+                  <option value="10"></option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Есть опыт работы?</label>
+              </div>
+              </div>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-md-9">
+              <label class="labels">Расскажите о себе</label>
+              <textarea class="form-control"></textarea>
+            </div>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-md-9">
+              <label class="labels">Загрузить сертификат</label>
+              <input id="fileupload" class="form-control" name="myfile" type="file" multiple />
+            </div>
+          </div>
+
+          <div class="mt-5 text-center">
+            <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
+          </div>
+        </div>
+      </div>
+
     </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-      <label class="form-check-label" for="flexRadioDefault2">
-        Я буду продавать сам
-      </label>
-    </div>
-
-</div>
-
-    <!--download images-->
-
-    <div class="mb-3 col-md-6">
-      <label for="formFile" class="form-label">Загрузить картики достижений</label>
-      <input class="form-control" type="file" id="formFile">
-    </div>
-
-    <!-- choose work-->
-<div class="col-md-6">
-    <select class="form-select" aria-label="Default select example">
-      <option selected>Ваш профиль</option>
-      <option value="1">здесь</option>
-      <option value="2">инфа</option>
-      <option value="3">с бд</option>
-    </select>
-</div>
-
-    <!-- about you-->
-
-    <div class="mb-3 col-md-6">
-      <label for="exampleFormControlTextarea1" class="form-label">О себе</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
-</form>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </div>
+  </div>
+  </div>
+  <div style="opacity: 0; width:1px">asdasdasdasd</div>
+  <script type='text/javascript'
+    src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
+  <script type='text/javascript' src=''></script>
+  <script type='text/javascript' src=''></script>
+  <script type='text/Javascript'></script>
+</body>
 {% endblock %}
