--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-<!doctype html>
-<html>
 
 <head>
     <meta charset='utf-8'>
@@ -109,7 +107,7 @@
                             <input type="text" class="form-control" value="" placeholder="Город"></div>
                     </div>
                     <div class="row mt-3">
-                        <div class="coll-md-3">
+                        <div class="col-md-12">
                             <label class="labels">Загрузить фото</label>
                             <input id="fileupload" class="form-control" name="myfile" type="file" />
                         </div>
@@ -138,6 +136,7 @@
     </div>
     </div>
     </div>
+    <div style="opacity: 0; width: 1px">asdasdasdasd</div>
     <script type='text/javascript'
         src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
     <script type='text/javascript' src=''></script>
@@ -156,5 +155,4 @@
         }
     }
 </script
-</html>
 {% endblock %}
