--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -77,30 +77,34 @@
       <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 xol-sm-2 bg-dark">
           <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-            <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-              <span class="fs-5 d-none d-sm-inline">
+            <a href="#" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+              <span class="fs-5 d-none d-sm-inline" style="font-size: large;">
                 Меню
               </span>
             </a>
             <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start hover-text-light" id="menu">
               <li class="mb-2 mt-3 border-bottom">
-                <a class="nav-link px-0 align-middle">
-                  <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Мой профиль</span>
+                <a href="#" class="nav-link px-0 align-middle">
+                  <!-- <i class="fs-4 bi-people"></i>  -->
+                  <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Мой профиль</span>
                 </a>
               </li>
               <li class="mb-2 mt-3 border-bottom">
-                <a class="nav-link px-0 align-middle">
-                  <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Мои товары</span>
+                <a href="#" class="nav-link px-0 align-middle">
+                  <!-- <i class="fs-4 bi-people"></i>  -->
+                  <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Мои товары</span>
                 </a>
               </li>
               <li class="mb-2 mt-3 border-bottom">
-                <a class="nav-link px-0 align-middle">
-                  <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Создать товар</span>
+                <a href="#" class="nav-link px-0 align-middle">
+                  <!-- <i class="fs-4 bi-people"></i>  -->
+                  <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Создать товар</span>
                 </a>
               </li>
               <li class="mb-2 mt-3 border-bottom">
-                <a class="nav-link px-0 align-middle">
-                  <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Регламент</span>
+                <a href="#" class="nav-link px-0 align-middle">
+                  <!-- <i class="fs-4 bi-people"></i>  -->
+                  <span class="ms-1 d-none d-sm-inline text-white" style="font-size: large;">Регламент</span>
                 </a>
               </li>
             </ul>
