--- a/bizopt/BO/templates/registration/login.html
+++ b/bizopt/BO/templates/registration/login.html
@@ -1,228 +1,180 @@
 <!doctype html>
 <html>
+
 <head>
-        <meta charset='utf-8'>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <title>Snippet - BBBootstrap</title>
-        <link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
-        <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-        <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-<style>
-body {
-	background: #eee
-}
-
-#regForm {
-	background-color: #ffffff;
-	margin: 0px auto;
-	font-family: Raleway;
-	padding: 40px;
-	border-radius: 10px
-}
-
-#register {
-	color: #6A1B9A
-}
-
-h1 {
-	text-align: center
-}
-
-input {
-	padding: 10px;
-	width: 100%;
-	font-size: 17px;
-	font-family: Raleway;
-	border: 1px solid #aaaaaa;
-	border-radius: 10px;
-	-webkit-appearance: none
-}
-
-.tab input:focus {
-	border: 1px solid #6a1b9a !important;
-	outline: none
-}
-
-input.invalid {
-	border: 1px solid #e03a0666
-}
-
-.tab {
-	display: none
-}
-
-button {
-	background-color: #6A1B9A;
-	color: #ffffff;
-	border: none;
-	border-radius: 50%;
-	padding: 10px 20px;
-	font-size: 17px;
-	font-family: Raleway;
-	cursor: pointer
-}
-
-button:hover {
-	opacity: 0.8
-}
-
-button:focus {
-	outline: none !important
-}
-
-#prevBtn {
-	background-color: #bbbbbb
-}
-
-.all-steps {
-	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	width: 100%;
-	display: inline-flex;
-	justify-content: center
-}
-
-.step {
-	height: 40px;
-	width: 40px;
-	margin: 0 2px;
-	background-color: #bbbbbb;
-	border: none;
-	border-radius: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 15px;
-	color: #6a1b9a;
-	opacity: 0.5
-}
-
-.step.active {
-	opacity: 1
-}
-
-.step.finish {
-	color: #fff;
-	background: #6a1b9a;
-	opacity: 1
-}
-
-.all-steps {
-	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 30px
-}
-
-.thanks-message {
-	display: none
-}
-</style>
-</head>
-{% block content %}
-
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-  {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-  {% else %}
-    <p>Please login to see this page.</p>
-  {% endif %}
-{% endif %}
-
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-
-<tr>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</tr>
-
-<tr>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-{# Assumes you setup the password_reset view in your URLconf #}
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
-{% endblock %}
-<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
-<script type='text/Javascript'>
-let currentTab = 0;
-document.addEventListener("DOMContentLoaded", function (event) {
-
-
-	showTab(currentTab);
-
-});
-
-function showTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[n].style.display = "block";
-	if (n == 0) {
-		document.getElementById("prevBtn").style.display = "none";
-	} else {
-		document.getElementById("prevBtn").style.display = "inline";
-	}
-	if (n == (x.length - 1)) {
-		document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-	} else {
-		document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-	}
-	fixStepIndicator(n)
-}
-
-function nextPrev(n) {
-	var x = document.getElementsByClassName("tab");
-	if (n == 1 && !validateForm()) return false;
-	x[currentTab].style.display = "none";
-	currentTab = currentTab + n;
-	if (currentTab === x.length) {
-        window.location='../';
-	}
-	showTab(currentTab);
-}
-
-function validateForm() {
-    let x, y, i, p1, p2, valid = true;
-    x = document.getElementsByClassName("tab");
-	y = x[currentTab].getElementsByTagName("input");
-    p1 = document.getElementById("password").value;
-    p2 = document.getElementById("sug_password").value;
-	for (i = 0; i < y.length; i++) {
-		if (y[i].value == "") {
-			y[i].className += " invalid";
-			valid = false;
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<title>Snippet - BBBootstrap</title>
+	<link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
+	<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
+	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+	<style>
+		body {
+			background: #eee
 		}
-	}
-    if(p1 != p2){
-        alert("Пароли не совпадают")
-        valid = false;
-    }
-	if (valid) {
-		document.getElementsByClassName("step")[currentTab].className += " finish";
-	}
 
-	return valid;
-}
+		#regForm {
+			background-color: #ffffff;
+			margin: 0px auto;
+			font-family: Raleway;
+			padding: 40px;
+			border-radius: 10px
+		}
 
-function fixStepIndicator(n) {
-    let i, x = document.getElementsByClassName("step");
-    for (i = 0; i < x.length; i++) {
-		x[i].className = x[i].className.replace(" active", "");
-	}
-	x[n].className += " active";
-}
+		#register {
+			color: #6A1B9A
+		}
+
+		h1 {
+			text-align: center
+		}
+
+		input {
+			padding: 10px;
+			width: 100%;
+			font-size: 17px;
+			font-family: Raleway;
+			border: 1px solid #aaaaaa;
+			border-radius: 10px;
+			-webkit-appearance: none
+		}
+
+		.tab input:focus {
+			border: 1px solid #6a1b9a !important;
+			outline: none
+		}
+
+		input.invalid {
+			border: 1px solid #e03a0666
+		}
+
+		button {
+			background-color: #6A1B9A;
+			color: #ffffff;
+			border: none;
+			border-radius: 50%;
+			padding: 10px 20px;
+			font-size: 17px;
+			font-family: Raleway;
+			cursor: pointer
+		}
+
+		button:hover {
+			opacity: 0.8
+		}
+
+		button:focus {
+			outline: none !important
+		}
+
+		#prevBtn {
+			background-color: #bbbbbb
+		}
+
+		.all-steps {
+			text-align: center;
+			margin-top: 30px;
+			margin-bottom: 30px;
+			width: 100%;
+			display: inline-flex;
+			justify-content: center
+		}
+
+		.step {
+			height: 40px;
+			width: 40px;
+			margin: 0 2px;
+			background-color: #bbbbbb;
+			border: none;
+			border-radius: 50%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 15px;
+			color: #6a1b9a;
+			opacity: 0.5
+		}
+
+		.step.active {
+			opacity: 1
+		}
+
+		.step.finish {
+			color: #fff;
+			background: #6a1b9a;
+			opacity: 1
+		}
+
+		.all-steps {
+			text-align: center;
+			margin-top: 30px;
+			margin-bottom: 30px
+		}
+
+		.thanks-message {
+			display: none
+		}
+	</style>
+</head>
+
+<body oncontextmenu='return false' class='snippet-body'>
+
+	<div class="container mt-5">
+		<div class="row d-flex justify-content-center align-items-center">
+			<div class="col-md-8">
+				<form method="post" id="regForm" action="{% url 'login' %}">
+					<h1 id="redistration"> Login here</h1>
+					<div class="all-steps" id="all-steps">
+						<a href="">
+							<span class="step">
+								<i class="fa fa-user"></i>
+							</span>
+						</a>
+					</div>
+
+					<div class="tab">
+						<p>
+							<br>
+							{{ form.username.label_tag }}
+							{{ form.username }}
+							<br>
+							<br>
+							{{ form.password.label_tag }}
+							{{ form.password }}
+						</p>
+						<p style="font-size: small;">Забыли пароль? <a href="{% url 'password_reset' %}">востановите
+								его</a></p>
+						<h7>Еще нет аккаунта? <a href="../signin.html">создай его</a></h7>
+					</div>
+					<div style="overflow: auto;" id="nextprevious">
+						<div style="float: right;">
+							{% csrf_token %}
+							<button type="submit" id="nextBtn" value="login">
+								<i class="fa fa-angle-double-right"></i>
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	{% if form.errors %}
+	<p>Your username and password didn't match. Please try again.</p>
+	{% endif %}
+
+	{% if next %}
+	{% if user.is_authenticated %}
+	<p>Your account doesn't have access to this page. To proceed,
+		please login with an account that has access.</p>
+	{% else %}
+	<p>Please login to see this page.</p>
+	{% endif %}
+	{% endif %}
+
+	{# Assumes you setup the password_reset view in your URLconf #}
+</body>
+<script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
 </script>
+
 </html>
