--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -1,3 +1,5 @@
+<form method="POST" >
+
 <div class="row">
   <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
     <h4 class="text-right">Профиль</h4>
@@ -95,3 +97,6 @@
     }
   }
 </script>
+
+
+</form>
