--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -1,3 +1,5 @@
+<form method="POST">
+
 <div class="row">
   <div class="col-md-1">
     <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div>
@@ -45,3 +47,5 @@
       </div>
     </div>
   </div>
+
+</form>
