--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -1,3 +1,5 @@
+<form method="POST">
+
 <div class="row">
   <div class="col-md-1">
     <div class="d-flex flex-column align-items-center text-center p-3 py-5"></div>
@@ -24,3 +26,5 @@
     </div>
   </div>
 </div>
+
+</form>
