--- a/bizopt/BO/templates/addTask.html
+++ b/bizopt/BO/templates/addTask.html
@@ -7,47 +7,36 @@
   <div class="container">
     <div class="title">addTask</div>
     <div class="content">
-      <form action="#">
-
+      <form method="post" action="{% url 'AddTask' %}">
+        {% csrf_token %}
         <div class="user-details">
           <div class="col-md">
             <div class="form-floating">
-              <input type="email" class="form-control" id="floatingInputGrid" placeholder="Название задачи" value="">
-              <label for="floatingInputGrid">Название задачи</label>
+              {{ form.task_name }}
             </div>
           </div>
           <div class="col-md">
             <div class="form-floating">
-              <select class="form-select" id="floatingSelectGrid" aria-label="Варианты из бд">
-                <option selected>Выбери...</option>
-                <option value="1">v1</option>
-                <option value="2">v2</option>
-                <option value="3">v3</option>
-              </select>
-              <label for="floatingSelectGrid">Works with selects</label>
+              {{ form.select }}
             </div>
           </div>
-      </div>
-
-        <div class="form-floating">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-            <label for="floatingTextarea2">Описание</label>
         </div>
 
-          <div class="input-box">
-            <br>
-            <div class="input-group mb-3">
-              <span class="input-group-text">Цена</span>
-              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-              <span class="input-group-text">руб</span>
-            </div>
+        <div class="form-floating">
+          {{ form.description }}
+        </div>
+
+        <div class="input-box">
+          <br>
+          <div class="input-group mb-3">
+            {{ form.price }}
           </div>
+        </div>
 
 
-  <div class="form-group">
-    <label for="inputDate">Введите дату:</label>
-    <input type="date" class="form-control">
-  </div>
+        <div class="form-group">
+          {{ form.data }}
+        </div>
 
 
         <div class="button">
