--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -175,6 +175,15 @@
                     </div>
 
                     {% csrf_token %}
+                    {% if form.errors %}
+                       {% for field in form %}
+                           {% for error in field.errors %}
+                              <div class="alert alert-danger">
+                                   <strong>{{ error|escape }}</strong>
+                              </div>
+                           {% endfor %}
+                       {% endfor %}
+                    {% endif %}
                     <div style="overflow:auto;" id="next-previous">
                         <div style="float:right;">
                             <button type="button" id="prevBtn" onclick="nextPrev(-1)">
